--- a/README
+++ b/README
@@ -1,31 +1,33 @@
 Installation
 
-requirements: ROOT
+requirements: CMake, ROOT
 
-In source directory do:
+In tpcf/correlation_fast do:
 
-mkdir build
-cd build
-cmake -DCMAKE_INSTALL_PREFIX=/where/to/install ..
 make 
-make install
+
 
 
 Running:
 
 --step 1
-modify the exaple configuration file tpcf_fast.cfg 
+modify the example configuration file tpcf_fast.cfg 
 
-correlation_fast njob totjob config.cfg
+./correlation_fast/correlation_fast njob totjob config.cfg
 
 where njob is the job number and totjob is the total number of jobs you want to submit: 0 <= njob < totjob
 The maximum nuber of available jobs depends on the number of regions defined in the .cfg: totjob < 5*theta_regions*phi_regions
 
---step2
-use hadd to combine the output files:
-hadd combined.root [file_out]_*.root
+--integral tabulation
+needed for z to r conversion in step 2
 
-correlation_fast_step2 combined.root tpcf_out.root
+./correlation_fast/tab_integral config.cfg
+
+--step 2
+use hadd to combine the output files:
+hadd [combined].root [file_out]_*.root
+
+./correlation_fast/step2 config.cfg
 
 
 
