--- a/python/kdtree/1.11/changelog
+++ b/python/kdtree/1.11/changelog
@@ -1,2 +1,6 @@
 Version 1.11:
-  - Add weighted histogram
+  - In CorrelationFunction.radial_angular_distance(): optimize Tree algorithms
+  The runtime of the Tree algorithms is O(NlogM) where N is the number of points
+  looping through, and M is the number of points in Tree.
+  Now create Tree using the smaller number of points between galaxies catalog,
+  and angular distribution.
