--- a/python/kdtree/1.11/README
+++ b/python/kdtree/1.11/README
@@ -1,7 +1,6 @@
 # Copyright: University of Rochester DESI group.
-# Authors: Tri Nguyen, Segev BenZvi, Regina Demina
+# Authors: Tri Nguyen, Segev BenZvi, Regina Demina, Tolga Yapici
 
-# Guide to writting configuration files:
 # Configuration files should be divided into python configuration sections.
 # Example:
 # To create section "SAMPLE_SECTION" with parameter "sample_par" and value "sample_val"
@@ -9,19 +8,30 @@
 #   sample_par=sample_val
 # Parameters provided:
 # Required:
-# Section: [FILE]
-#   - data_filename: Path to galaxies catalog. 
-#   - random_filename: Path to randoms catalog.
-#   Note: Catalogs should be an ASCII file with 4 cols: RA, DEC, R, WEIGHT. 
-#          Will implement .fits format.
+# Section: [FITS]
+#   - data_filename: Path to galaxies catalog. Should be in .fits format.
+#   - random_filename: Path to randoms catalog. Should be in .fits format
+#   - INDEX: Index of header containing data.
+#   - RA: Name of columns with right ascension data.
+#   - DEC: Name of columns with declination data.
+#   - Z: Name of columns with redshift data.
+#   - WEIGHT: Name of columns with weight data.
+#   - WEIGHT_FKP: Name of columns with weight_fkp, or redshift distribution weight.
+#   - WEIGHT_SDC: Name of columns with weight_sdc, or weight from star distribution.
+#   - WEIGHT_NOZ: Name of columns with weight_noz, or weight due to redshift failure.
+#   - WEIGHT_CP: Name of columns with weight_cp, or wieght due to fiber collision (close pairs).
+#   Note: Import will search first for WEIGHT_FKP, WEIGHT_SDC, WEIGHT_NOZ, WEIGHT_CP and combined
+#   them using equation weight = weight_fkp*weight_sdc*(weight_noz+weight_cp-1). If not found, 
+#   will search for WEIGHT instead.
 # Section: [BINNING]
-#   - s_max: maximum separation to be considered in two-point correlation.
-#   - binwidth_ra: binwidth along x-axis of 2-d angular distribution R(ra, dec).
-#   - binwidth_dec: binwidth along y-axis of 2-d angular distribution R(ra, dec).
-#   - binwidth_r: binwidth of radial distribution P(r).
-#   - binwidth_theta: binwidth of angular distance distribution f(theta) and 
+#   - s_max: Maximum separation to consider in two-point correlation.
+#   - theta_max: Maximum angular distance to consider. At minimum radius, angular distance must span at least s_max.
+#   - binwidth_ra: Binwidth along x-axis of 2-d angular distribution R(ra, dec).
+#   - binwidth_dec: Binwidth along y-axis of 2-d angular distribution R(ra, dec).
+#   - binwidth_r: Binwidth of radial distribution P(r).
+#   - binwidth_theta: Binwidth of angular distance distribution f(theta) and 
 #                     binwidth along x-axis of 2-d angular-radial distribution g(theta, r).
-#   - binwidth_s: binwidth of two-point correlation function and separation histogram RR, DR, DD.
+#   - binwidth_s: Binwidth of two-point correlation function and separation histogram RR, DR, DD.
 #   Note: All angular variables have unit of degree. All distance variables have unit of Mpc/h.
 #          Will implement unit input.
 # Optional: Not yet implemented.
