--- a/python/kdtree/1.20/README
+++ b/python/kdtree/1.20/README
@@ -1,7 +1,6 @@
 # Copyright: University of Rochester DESI group.
-# Authors: Tri Nguyen, Segev BenZvi, Regina Demina
+# Authors: Tri Nguyen, Segev BenZvi, Regina Demina, Tolga Yapici
 
-# Guide to writting configuration files:
 # Configuration files should be divided into python configuration sections.
 # Example:
 # To create section "SAMPLE_SECTION" with parameter "sample_par" and value "sample_val"
@@ -17,6 +16,13 @@
 #   - DEC: Name of columns with declination data.
 #   - Z: Name of columns with redshift data.
 #   - WEIGHT: Name of columns with weight data.
+#   - WEIGHT_FKP: Name of columns with weight_fkp, or redshift distribution weight.
+#   - WEIGHT_SDC: Name of columns with weight_sdc, or weight from star distribution.
+#   - WEIGHT_NOZ: Name of columns with weight_noz, or weight due to redshift failure.
+#   - WEIGHT_CP: Name of columns with weight_cp, or wieght due to fiber collision (close pairs).
+#   Note: Import will search first for WEIGHT_FKP, WEIGHT_SDC, WEIGHT_NOZ, WEIGHT_CP and combined
+#   them using equation weight = weight_fkp*weight_sdc*(weight_noz+weight_cp-1). If not found, 
+#   will search for WEIGHT instead.
 # Section: [BINNING]
 #   - s_max: Maximum separation to consider in two-point correlation.
 #   - theta_max: Maximum angular distance to consider. At minimum radius, angular distance must span at least s_max.
@@ -28,4 +34,4 @@
 #   - binwidth_s: Binwidth of two-point correlation function and separation histogram RR, DR, DD.
 #   Note: All angular variables have unit of degree. All distance variables have unit of Mpc/h.
 #          Will implement unit input.
-# Optional: Not yet implemented.
+# Optional: Not yet implemented.,
