--- a/python/no_cosmo/README
+++ b/python/no_cosmo/README
@@ -4,6 +4,9 @@
 # FINDING CATALOG BOUNDARIES
 # limit.py return the maximum and minimum RA, DEC, Z of each given catalog, and of 
 # all given catalogs. 
+# Example:
+#   Call "python3 limit.py catalog1 catalog2" will print out the maximum and minimum
+#   RA, DEC, Z of catalog1 and catalog2, and the maximum and minimum RA, DEC, Z of both.
 
 # JOBS
 # We use divide.py to divide the program into multiple jobs.
