--- a/python/README
+++ b/python/README
@@ -4,20 +4,19 @@
 # "A Computationally Efficient Approach for Calculating Galaxy Two-Point Correlations"
 
 # MAIN FUNCTIONS
-# Python module to calculate two-point correlation function using the method in
+# Two python modules to calculate two-point correlation function using the method in
 # refered paper. In short, the method assumes the redshift and angular distribution
 # of random galaxies are independent, and proceeds to calculate redshift and
 # angular separation distribution P(z) and f(theta) then applies integration. 
 # Please refer to the refered paper for more information.
-
-# Non-cosmology module will calculate two-point correlation using a given
+# + Non-cosmology module will calculate two-point correlation using a given
 # cosmological model.
-# Cosmology module will calculate two-point correlation in two steps. In step one, 
+# + Cosmology module will calculate two-point correlation in two steps. In step one, 
 # the components for two-point correlation (e.g. angular separation f(theta) and 
 # angular-redshift g(theta, r)). In step two, cosmological model is applied to
 # calculate two-point correlation function. The result in step one (which takes 
 # majority of run time) is independent of the cosmology and thus different cosmology 
-# models can then be applied.
+# models can then be applied. 
 
 # OTHER FUNCTIONS
 # + Finding catalog boundaries
