--- a/python/README
+++ b/python/README
@@ -9,11 +9,11 @@
 # of random galaxies are independent, and proceeds to calculate redshift and
 # angular separation distribution P(z) and f(theta) then applies integration. 
 # Please refer to the refered paper for more information.
-# + Non-cosmology module will calculate two-point correlation using a given
-# cosmological model.
-# + Cosmology module will calculate two-point correlation in two steps. In step one, 
+# + Pre-cosmology module will apply cosmological model, then calculate RR, DR, DD and 
+# the two-point correlation using a given
+# + Post-cosmology module will calculate two-point correlation in two steps. In step one, 
 # the components for two-point correlation (e.g. angular separation f(theta) and 
-# angular-redshift g(theta, r)). In step two, cosmological model is applied to
+# angular-redshift g(theta, z)). In step two, cosmological model is applied to
 # calculate two-point correlation function. The result in step one (which takes 
 # majority of run time) is independent of the cosmology and thus different cosmology 
 # models can then be applied. 
